--- a/src/scripts/home/views/welcome.html
+++ b/src/scripts/home/views/welcome.html
@@ -21,10 +21,13 @@
     </md-tabs>
   </div>
 </md-toolbar>
-<div layout-fill style="background-color:black;" layout="column" layout-align="center center" flex>
+<div layout-fill style="background-color:black;" layout="column" layout-align="start center">
 
   <ui-view style="padding-top: 64px" layout-fill>
-    <h1 style="color:white;">Michio Kushi</h1>
+    <div layout="column" layout-align="center center" layout-fill>
+      <h1 style="color:white;">Michio Kushi</h1>
+
+    </div>
   </ui-view>
 
 </div>
