--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -266,6 +266,10 @@ em-embed {
     border: 0;
   }
 }
+//google map styles
+.angular-google-map-container {
+  height: 400px;
+}
 // Modifier class for 16:9 aspect ratio
 .embed-responsive-16by9 {
   padding-bottom: 56.25%;
